new picture+links

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   <body>
     <main class="main">
       <article class="person">
-        <img class="person__image" src="avatar.png" alt="obrazek" />
+        <img class="person__image" src="IMG_91499.jpg" alt="Mateusz w górach" />
         <div>
           <header class="person__info">
-            <h1 class="person__name">Imię i nazwisko</h1>
-            <p class="person__position">frontend developer</p>
+            <h1 class="person__name">Mateusz Meler</h1>
+            <p class="person__position">future frontend developer</p>
           </header>
 
           <p class="person__dscription">
@@ -25,8 +25,25 @@
             technologiami, w swojej twórczości ocierając się o sztukę.
           </p>
           <p class="person__dscription person__dscription--links">
-            W sieci: <a class="links" href="#">Facebook</a>,
-            <a class="links" href="#">GitHub</a>, <a class="links" href="#">Instagram</a>.
+            W sieci:
+            <a
+              class="links"
+              href="https://facebook.com/mateusz.meler"
+              target="_blank"
+              >Facebook</a
+            >,
+            <a
+              class="links"
+              href="https://github.com/Mateusz-Meler"
+              target="_blank"
+              >GitHub</a
+            >,
+            <a
+              class="links"
+              href="https://www.instagram.com/melers93/"
+              target="_blank"
+              >Instagram</a
+            >.
           </p>
         </div>
       </article>
