--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
           </header>
 
           <p class="person__dscription">
-            Programista z kilkunastoletnim doświadczeniem, fotograf, operator
-            drona, właściciel Sokoła Millennium (na razie tylko z Lego),
-            prelegent i szkoleniowiec. Uwielbia eksperymentować z nowymi
-            technologiami, w swojej twórczości ocierając się o sztukę.
+            Z wykształcenia jestem inżynierem zarządzania i inżynierii produkcji.
+            Interesuję się grą na pianinie, dronami i nowymi technologiami. 
+            Jeżdżę na longboardzie i układam kostki rubika. Zamierzam przejąć kontrolę nad światem IT!
           </p>
           <p class="person__dscription person__dscription--links">
             W sieci:
