--- a/index.html
+++ b/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="pl">
+  </head>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wizytówka</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link href="normalize.css" rel="stylesheet" type="text/css" />
+    <meta
+      name="description"
+      content="Prosty projekt biznesowej wizytówki"
+    />
+    <!-- Title -->
+    <meta property="og:title" content="Wizytówka" />
+    <!-- OPTIONAL description. 2-4 sentences. -->
+    <meta
+      property="og:description"
+      content="Prosty projekt biznesowej wizytówki"
+    />
+    <!-- full url with http(s) ie. https://maciejkorsan.github.io/my-repo/ -->
+    <meta
+      property="og:url"
+      content="https://mateusz-meler.github.io/business-card/"
+    />
+    <!-- full url to the image with http(s) ie. https://maciejkorsan.github.io/my-repo/assets/img/fb.png. Facebook suggests at least 1200 x 630. -->
+    <meta
+      property="og:image"
+      content="https://mateusz-meler.github.io/business-card/ogg.png"
+    />
   </head>
+  <!-- uncomment the line below to enable PWA  -->
+  <!-- <link rel="manifest" href="manifest.json" /> -->
+
 
   <body>
     <main class="main">
