feat: adding mobile media queries

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <p class="person__dscription">
             Z wykształcenia jestem inżynierem zarządzania i inżynierii produkcji.
             Interesuję się grą na pianinie, dronami i nowymi technologiami. 
-            Jeżdżę na longboardzie i układam kostki rubika. Zamierzam przejąć kontrolę nad światem IT!
+            Jeżdżę na longboardzie i układam kostki rubika. Zamierzam przejąć kontrolę nad Światem IT!
           </p>
           <p class="person__dscription person__dscription--links">
             W sieci:
